# kinlib

./: .gitignore  CMakeLists.txt  README.md  package.xml
files/: baxter.urdf  baxter_gst0.csv  baxter_joint_axes.csv  baxter_joint_limits.csv  baxter_joint_q.csv  joint_angles.csv  matlab_fk_results.csv  motion_plan.csv  screw_param_check_g_f.csv  screw_param_check_g_i.csv  screw_params.csv
files/Demonstrations/Debug/: ee_trajectory.csv  task_instance.csv
files/Demonstrations/ScoopAndPour1/: ee_trajectory.csv  new_motion_plan.csv  object_poses.csv
include/kinlib/: kinlib.h  kinlib_kinematics.h  kinlib_resources.h.in  motion_planning.h
include/kinlib_test/: config.h.in
src/: DualQuat.cpp  example.cpp  kinlib_kinematics.cpp  manipulator.cpp  motion_planning.cpp  python_bindings.cpp
test/: kinlib_optime_test.cpp  kinlib_test.cpp
